--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
         "express": "^4.18.2",
         "express-static-gzip": "^2.1.7",
         "picocolors": "^1.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "experimental",
+        "react-dom": "experimental",
         "react-helmet-async": "^1.3.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
