--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
         "prepublishOnly": "npm i && npm run prepare"
     },
     "license": "MIT",
+    "peerDependencies": {
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
+    },
     "dependencies": {
-        "@tata1mg/router": "^0.0.1-beta.2",
         "@vitejs/plugin-react": "^4.4.1",
         "body-parser": "^1.20.2",
         "compression": "^1.7.4",
@@ -33,8 +36,6 @@
         "express": "^4.18.2",
         "express-static-gzip": "^2.1.7",
         "picocolors": "^1.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "react-helmet-async": "^1.3.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
@@ -58,6 +59,16 @@
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
         "rollup-plugin-visualizer": "^5.14.0"
+    },
+    "overrides": {
+        "react-helmet-async": {
+            "react": "^19.0.0",
+            "react-dom": "^19.0.0"
+        },
+        "react-redux": {
+            "react": "^19.0.0",
+            "react-dom": "^19.0.0"
+        }
     },
     "lint-staged": {
         "*.{js,jsx}": [
