--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "catalyst-core",
-    "version": "0.0.2-canary.1",
+    "name": "catalyst-core-internal",
+    "version": "0.0.2-canary.3",
     "type": "module",
     "description": "Web framework that provides great performance out of the box",
     "bin": {
