--- a/src/native/androidProject/app/src/main/AndroidManifest.xml
+++ b/src/native/androidProject/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         tools:targetApi="31">
         <activity
             android:name="io.yourname.androidproject.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
