--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
         "express": "^4.18.2",
         "express-static-gzip": "^2.1.7",
         "picocolors": "^1.0.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
         "react-helmet-async": "^1.3.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
@@ -65,5 +63,9 @@
             "eslint .",
             "prettier . --write"
         ]
+    },
+    "peerDependencies": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
