--- a/src/native/androidProject/app/src/main/AndroidManifest.xml
+++ b/src/native/androidProject/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         tools:targetApi="31">
         <activity
             android:name="io.yourname.androidproject.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +35,7 @@
         </activity>
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="io.yourname.androidproject.release.fileprovider"
+            android:authorities="io.yourname.androidproject.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
