--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "./logger": "./dist/logger.js",
         "./caching": "./dist/caching.js",
         "./router/ClientRouter": "./dist/router/ClientRouter.js",
-        "./sentry": "./dist/sentry.js"
+        "./sentry": "./dist/sentry.js",
+        "./otel": "./dist/otel.js"
     },
     "scripts": {
         "lint": "eslint .",
