--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "catalyst-core",
-    "version": "0.0.1-beta.15",
+    "version": "0.0.1-beta.16",
     "main": "index.js",
     "description": "Web framework that provides great performance out of the box",
     "bin": {
@@ -29,7 +29,8 @@
         "./logger": "./dist/logger.js",
         "./caching": "./dist/caching.js",
         "./router/ClientRouter": "./dist/router/ClientRouter.js",
-        "./sentry": "./dist/sentry.js"
+        "./sentry": "./dist/sentry.js",
+        "./otel": "./dist/otel.js"
     },
     "scripts": {
         "lint": "eslint .",
