--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "./caching": "./dist/caching.js",
         "./router/ClientRouter": "./dist/router/ClientRouter.js",
         "./WebBridge": "./dist/native/bridge/WebBridge.js",
-        "./hooks": "./dist/native/bridge/hooks.js"
+        "./hooks": "./dist/native/bridge/hooks.js",
+        "./sentry": "./dist/sentry.js",
+        "./otel": "./dist/otel.js"
     },
     "scripts": {
         "lint": "eslint .",
