--- a/src/native/iosnativeWebView/iosnativeWebView/Info.plist
+++ b/src/native/iosnativeWebView/iosnativeWebView/Info.plist
@@ -11,5 +11,16 @@
     <string>Debug web content in Safari Web Inspector</string>
     <key>NSCameraUsageDescription</key>
     <string>This app requires camera access to capture images</string>
+    <key>NSUserNotificationUsageDescription</key>
+    <string>This app needs notification permission to send you important updates</string>
+    <key>NSLocalNotificationUsageDescription</key>
+    <string>This app uses notifications to alert you about important events</string>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>remote-notification</string>
+        <string>background-fetch</string>
+    </array>
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
 </dict>
 </plist>
