--- a/src/native/iosnativeWebView/iosnativeWebView/Info-Release.plist
+++ b/src/native/iosnativeWebView/iosnativeWebView/Info-Release.plist
@@ -5,7 +5,11 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true/>
+		<false/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<!-- Add specific production domains here if needed -->
+		</dict>
 	</dict>
 	<key>NSLocalNetworkUsageDescription</key>
     <string>Debug web content in Safari Web Inspector</string>
