--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         "@loadable/webpack-plugin": "^5.15.2",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "@svgr/webpack": "^8.1.0",
-        "@tata1mg/router": "0.0.1-beta.7",
+        "@tata1mg/router": "0.1.0-beta",
         "app-root-path": "^3.1.0",
         "babel-loader": "^9.1.3",
         "babel-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
@@ -77,13 +77,13 @@
         "picocolors": "^1.0.0",
         "postcss-loader": "^7.3.3",
         "postcss-scss": "^4.0.9",
-        "react": "^18.2.0",
+        "react": "^19.2.0",
         "react-compiler-runtime": "^19.0.0-beta-decd7b8-20250118",
-        "react-dom": "^18.2.0",
-        "react-redux": "^8.1.3",
+        "react-dom": "^19.2.0",
+        "react-redux": "^9.2.0",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.16.0",
-        "redux": "^4.2.1",
+        "redux": "^5.0.1",
         "sass": "^1.69.5",
         "sass-loader": "^13.3.2",
         "sass-resources-loader": "^2.2.5",
@@ -113,6 +113,14 @@
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5"
+    },
+    "overrides": {
+        "@loadable/component": {
+            "react": "^16.3.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+        },
+        "@loadable/server": {
+            "react": "^16.3.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+        }
     },
     "lint-staged": {
         "*.{js,jsx}": [
