--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@tata1mg/router": "^0.0.1-beta.2",
         "@vitejs/plugin-react": "^4.4.1",
         "body-parser": "^1.20.2",
         "compression": "^1.7.4",
@@ -33,6 +32,8 @@
         "express": "^4.18.2",
         "express-static-gzip": "^2.1.7",
         "picocolors": "^1.0.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "react-helmet-async": "^1.3.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
@@ -41,9 +42,7 @@
         "sanitize-html": "^2.13.1",
         "sass": "^1.89.2",
         "ua-parser-js": "^1.0.37",
-        "vite": "^6.3.5",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "vite": "^6.3.5"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
@@ -65,5 +64,15 @@
             "eslint .",
             "prettier . --write"
         ]
+    },
+    "overrides": {
+        "react-helmet-async": {
+            "react": "^19.2.0",
+            "react-dom": "^19.2.0"
+        },
+        "react-redux": {
+            "react": "^19.2.0",
+            "react-dom": "^19.2.0"
+        }
     }
 }
