--- a/src/native/androidProject/app/src/main/AndroidManifest.xml
+++ b/src/native/androidProject/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProject"
-        android:usesCleartextTraffic="${allowCleartextTraffic}"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
             android:name="io.yourname.androidproject.SplashActivity"
