fix: rsync issue

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "lint": "eslint .",
         "lint-staged": "lint-staged",
         "prettify": "prettier . --write",
-        "prepare": "babel src --out-dir ./dist --ignore '**/.build/**' && mkdir -p dist/native && cp -r src/native/androidProject src/native/build.swift src/native/assets dist/native/ && rsync -a --exclude='.package-config-hash' src/native/iosnativeWebView/ dist/native/iosnativeWebView/",
+        "prepare": "babel src --out-dir ./dist --ignore '**/.build/**' && mkdir -p dist/native && cp -r src/native/androidProject src/native/build.swift src/native/assets dist/native/ && mkdir -p dist/native/iosnativeWebView && tar -C src/native/iosnativeWebView --exclude='.build' --exclude='.package-config-hash' -cf - . | tar -C dist/native/iosnativeWebView -xf -",
         "prepublishOnly": "npm i && npm run prepare"
     },
     "license": "MIT",
