chore: add file logs for replacement for internal publish

--- a/.github/workflows/publish-manual.yml
+++ b/.github/workflows/publish-manual.yml
@@ -166,10 +166,15 @@ jobs:
             - name: Rename dist files (if internal)
               if: github.event.inputs.package == 'catalyst-core-internal'
               run: |
-                  # Replace 'catalyst-core' with 'catalyst-core-internal' in dist (excluding native templates)
-                  # Uses negative lookbehind logic: match catalyst-core NOT followed by -internal
-                  find ./dist -type f \( -name "*.js" -o -name "*.ts" \) ! -path "./dist/native/iosnativeWebView/*" ! -path "./dist/native/androidProject/*" -exec sed -i 's/catalyst-core\([^-]\)/catalyst-core-internal\1/g' {} +
-                  find ./dist -type f \( -name "*.js" -o -name "*.ts" \) ! -path "./dist/native/iosnativeWebView/*" ! -path "./dist/native/androidProject/*" -exec sed -i 's/catalyst-core$/catalyst-core-internal/g' {} +
+                  # Replace 'catalyst-core' with 'catalyst-core-internal' in all dist files
+                  echo "Finding .js and .ts files in dist directory..."
+                  FILES=$(find ./dist -type f \( -name "*.js" -o -name "*.ts" \))
+                  echo "Found $(echo "$FILES" | wc -l) files to process"
+                  echo "$FILES"
+                  echo ""
+                  echo "Replacing 'catalyst-core' with 'catalyst-core-internal'..."
+                  find ./dist -type f \( -name "*.js" -o -name "*.ts" \) -exec sed -i 's/catalyst-core/catalyst-core-internal/g' {} +
+                  echo "✓ Replacement complete"
 
             - name: Commit version bump
               if: github.event.inputs.package == 'catalyst-core'
