--- a/.github/workflows/publish-manual.yml
+++ b/.github/workflows/publish-manual.yml
@@ -155,7 +155,10 @@ jobs:
 
             - name: Rename package (if internal)
               if: github.event.inputs.package == 'catalyst-core-internal'
-              run: npm pkg set name=catalyst-core-internal
+              run: |
+                  npm pkg set name=catalyst-core-internal
+                  # Remove prepublishOnly to prevent rebuilding (which would undo our replacements)
+                  npm pkg delete scripts.prepublishOnly
 
             - name: Install dependencies
               run: npm install
@@ -167,14 +170,12 @@ jobs:
               if: github.event.inputs.package == 'catalyst-core-internal'
               run: |
                   # Replace 'catalyst-core' with 'catalyst-core-internal' in all dist files
-                  echo "Finding .js and .ts files in dist directory..."
-                  FILES=$(find ./dist -type f \( -name "*.js" -o -name "*.ts" \))
-                  echo "Found $(echo "$FILES" | wc -l) files to process"
-                  echo "$FILES"
+                  echo "Files containing 'catalyst-core' BEFORE replacement:"
+                  grep -rl "catalyst-core" ./dist --include="*.js" --include="*.ts" || echo "No matches found"
+
                   echo ""
                   echo "Replacing 'catalyst-core' with 'catalyst-core-internal'..."
-                  find ./dist -type f \( -name "*.js" -o -name "*.ts" \) -exec sed -i 's/catalyst-core/catalyst-core-internal/g' {} +
-                  echo "✓ Replacement complete"
+                  find ./dist -type f \( -name "*.js" -o -name "*.ts" \) -exec sed -i 's/catalyst-core/catalyst-core-internal/g' {} \;
 
             - name: Commit version bump
               if: github.event.inputs.package == 'catalyst-core'
